# assetcues-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  tmp_macbook_web_like_response.json
.github/workflows/: ci.yml
far_ai_brain/: logging_setup.py
far_ai_brain/ai/: vlm_adapter.py
far_ai_brain/api/: main.py
far_ai_brain/config/: models.py  settings.py
far_ai_brain/nodes/: classify.py  enrich.py  extract.py  preprocess.py  retry_extract.py  verify.py
far_ai_brain/pipeline/: graph.py
far_ai_brain/prompts/: classification.py  extraction.py  group_validation.py  split_research.py  verification.py
far_ai_brain/schemas/: api.py  extraction.py  state.py
far_ai_brain/services/: __init__.py  training_collector.py
far_ai_brain/utils/: image.py
tests/: conftest.py  test_api.py  test_classify.py  test_config.py  test_enrich.py  test_extract.py  test_image_utils.py  test_pipeline.py  test_preprocess.py  test_prompts.py  test_retry_extract.py  test_schemas.py  test_training_collector.py  test_verify.py  test_vlm_adapter.py
